started styling - identfied delete button

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,9 +18,26 @@ body {
   background-color: #eee;
   border-radius: 6px;
   padding: 60px;
+
   h1 {
     font-size: 60px;
     line-height: 1;
     letter-spacing: -1px;
   }
+
+  .list {
+
+    li {
+      background-color: white;
+      
+    }
+
+    span {
+      background-color: black;
+      color: white;
+      font-weight: bold;
+    }
+
+  }
+
 }
