--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,7 +7,10 @@ body {
   background: #fafafa;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #333;
+  background-image: url(../images/fromthesea.JPG);
 }
+
+
 
 .hero-unit {
   margin: 50px auto 0 auto;
@@ -19,7 +22,7 @@ body {
   border-radius: 6px;
   padding: 60px;
 
-  background-image: url(images/fromthesea.JPG);
+  background-image: url(../images/sittingaround.JPG);
 
   h1 {
     font-size: 60px;
