--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,7 +12,7 @@ body {
 
 
 
-.hero-unit {
+.container {
   margin: 50px auto 0 auto;
   width: 600px;
   font-size: 18px;
@@ -77,6 +77,20 @@ body {
       background-color: hsla(296, 100%, 53%, 1);
       opacity: 1;
     }
+
+    .editform{
+      opacity: 1;
+
+      :hover{
+        background-color: white;
+      }
+
+    input {
+      width: 22em;
+    }
+
+    }
+
   }
 
 }
